name:                opaleye-helpers
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/th-opaleye#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Opaleye.TH, Opaleye.TH.CommonInstances
  other-modules:       Opaleye.TH.Transformations
                       , Opaleye.TH.Data
                       , VacationLabs.Database.PostgreSQL.Simple.HStore
  default-extensions:  RecordWildCards, ViewPatterns
  build-depends:       base >= 4.7 && < 5
                       , bytestring
                       , aeson
                       , text
                       , opaleye
                       , postgresql-simple
                       , Decimal
                       , product-profunctors
                       , profunctors
                       , mtl
                       , lens
                       , transformers
                       , template-haskell
                       , safe
                       , uuid
                       -- dependencies of Hstore
                       , attoparsec
                       , containers

  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite th-opaleye-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , th-opaleye
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/th-opaleye
